[gd_scene load_steps=9 format=3 uid="uid://dic5qt7x3c6f6"]

[ext_resource type="Script" path="res://Scripts/ObjectScripts/ButtonLogic.gd" id="1_xtdy1"]

[sub_resource type="BoxShape3D" id="BoxShape3D_sqsuo"]
size = Vector3(1, 0.01, 1)

[sub_resource type="BoxMesh" id="BoxMesh_8ftm8"]
size = Vector3(1, 0.25, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2302w"]
albedo_color = Color(0.890196, 0.054902, 0.054902, 1)
metallic = 1.0
roughness = 0.7

[sub_resource type="BoxShape3D" id="BoxShape3D_ad3c0"]
size = Vector3(1, 0.25, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_l1qi3"]
size = Vector3(1.5, 0.25, 1.5)

[sub_resource type="BoxMesh" id="BoxMesh_un8xm"]
size = Vector3(1.5, 0.25, 1.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kfwfx"]
albedo_color = Color(0.258824, 0.258824, 0.258824, 1)
roughness = 0.44

[node name="button" type="CharacterBody3D"]
script = ExtResource("1_xtdy1")

[node name="activationArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 0.26, 2.08165e-12)

[node name="CollisionShape3D" type="CollisionShape3D" parent="activationArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, -0.17, 2.08165e-12)
shape = SubResource("BoxShape3D_sqsuo")

[node name="buttonParts" type="CharacterBody3D" parent="."]

[node name="buttonMesh" type="MeshInstance3D" parent="buttonParts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, -0.05, 2.08165e-12)
mesh = SubResource("BoxMesh_8ftm8")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_2302w")

[node name="buttonCollisionShape" type="CollisionShape3D" parent="buttonParts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, -0.05, 2.08165e-12)
shape = SubResource("BoxShape3D_ad3c0")

[node name="decorationCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
shape = SubResource("BoxShape3D_l1qi3")

[node name="decorationMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
mesh = SubResource("BoxMesh_un8xm")
surface_material_override/0 = SubResource("StandardMaterial3D_kfwfx")

[connection signal="body_entered" from="activationArea" to="." method="_on_activation_area_body_entered"]
[connection signal="body_exited" from="activationArea" to="." method="_on_activation_area_body_exited"]
